--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <img src="img/imagen1.jpg">
         </article>
         <article class="entrada-blog">
-            <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
-            <a href="#">Leer más</a>
+            <p>Aliquam tempus neque eget tempus consectetur. Integer ligula nunc, sagittis non malesuada quis, consequat eu ipsum. In hac habitasse platea dictumst. Pellentesque porttitor commodo ante sit amet cursus. Donec dignissim quis enim ut auctor. Vivamus quis nunc tincidunt, finibus libero cursus, pellentesque risus. Praesent rhoncus ac lacus eget egestas. Nam vitae ipsum a nulla ullamcorper sollicitudin in in magna. Donec ut tristique tellus, vitae vehicula tellus. Aenean laoreet urna a erat maximus, sed hendrerit nisl euismod. Ut dignissim viverra tincidunt. Aliquam erat volutpat. Suspendisse fringilla feugiat velit. Ut ut arcu viverra elit commodo rhoncus. Donec tempor feugiat arcu, ut facilisis felis venenatis ac. Pellentesque eleifend magna nec lacus mattis sagittis.
+                </p>
         </article>
     </div>
 
