more changes,folder english and folder spanish

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X/UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
+    <link rel="stylesheet" href="fontawesome/css/all.min.css"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
-    <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/ca61fbd304.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ca61fbd304.js" crossorigin="anonymous"></script>
     <title>Carla Pomarico</title>
 </head>
 
@@ -42,8 +41,8 @@
             <img src="img/imagen1.jpg">
         </article>
         <article class="entrada-blog">
-            <p>Aliquam tempus neque eget tempus consectetur. Integer ligula nunc, sagittis non malesuada quis, consequat eu ipsum. In hac habitasse platea dictumst. Pellentesque porttitor commodo ante sit amet cursus. Donec dignissim quis enim ut auctor. Vivamus quis nunc tincidunt, finibus libero cursus, pellentesque risus. Praesent rhoncus ac lacus eget egestas. Nam vitae ipsum a nulla ullamcorper sollicitudin in in magna. Donec ut tristique tellus, vitae vehicula tellus. Aenean laoreet urna a erat maximus, sed hendrerit nisl euismod. Ut dignissim viverra tincidunt. Aliquam erat volutpat. Suspendisse fringilla feugiat velit. Ut ut arcu viverra elit commodo rhoncus. Donec tempor feugiat arcu, ut facilisis felis venenatis ac. Pellentesque eleifend magna nec lacus mattis sagittis.
-                </p>
+            <p>Aliquam tempus neque eget tempus consectetur. Integer ligula nunc, sagittis non malesuada quis, consequat eu ipsum. In hac habitasse platea dictumst.
+            </p>
         </article>
     </div>
 
