--- a/index - Copy.html
+++ b/index - Copy.html
@@ -6,45 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X/UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cookie" type="text/css">
     <title>Carla Pomarico</title>
 </head>
 
 <body>
 
-<header>
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index - Copy.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="about.html">Experience</a>
-                <a class="nav-item nav-link" href="about.html">Education</a>
-                <a class="nav-item nav-link" href="index - Copy.html#about">About</a>
-                <a class="nav-item nav-link" href="index - Copy.html#contact">Contact</a>
-              </div>
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="index - Copy.html">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="about.html">Experience</a>
+                    <a class="nav-item nav-link" href="about.html">Education</a>
+                    <a class="nav-item nav-link" href="index - Copy.html#about">About</a>
+                    <a class="nav-item nav-link" href="index - Copy.html#contact">Contact</a>
+                </div>
             </div>
-          </nav>
+        </nav>
 
-        </header>
+    </header>
 
     <h1>Welcome</h1>
 
-    <div class="welcome-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis nisi lacus, nec
-        posuere lacus interdum eget. Ut et ullamcorper metus. Praesent molestie enim volutpat accumsan porta. Vivamus
-        sit amet posuere mauris. Suspendisse quis dui ut neque maximus efficitur. In elementum mi ac imperdiet
-        ultricies. Mauris pharetra justo in faucibus mattis. Donec pretium urna quis rhoncus vestibulum. Integer
-        venenatis, ex nec pretium tristique, mi est dictum erat, at tempus sapien enim quis diam. Nullam viverra ex
-        libero, non suscipit enim vulputate a. Vestibulum ac erat eget leo feugiat pretium. Nam maximus dolor nulla,
-        eget consequat nisi tincidunt sed. Curabitur quis enim non turpis porttitor iaculis.
+
+    <div class="container">
+        <div class="col-12">
+            <div class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis nisi lacus,
+                nec
+                posuere lacus interdum eget. Ut et ullamcorper metus. Praesent molestie enim volutpat accumsan porta.
+                Vivamus
+                sit amet posuere mauris. Suspendisse quis dui ut neque maximus efficitur. In elementum mi ac imperdiet
+                ultricies. Mauris pharetra justo in faucibus mattis. Donec pretium urna quis rhoncus vestibulum. Integer
+                venenatis, ex nec pretium tristique, mi est dictum erat, at tempus sapien enim quis diam. Nullam viverra
+                ex
+                libero, non suscipit enim vulputate a. Vestibulum ac erat eget leo feugiat pretium. Nam maximus dolor
+                nulla,
+                eget consequat nisi tincidunt sed. Curabitur quis enim non turpis porttitor iaculis.
+            </div>
+        </div>
     </div>
 
     <h1 id="about">About Me</h1>
