editing some stuff

--- a/index.html
+++ b/index.html
@@ -1,162 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X/UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/ca61fbd304.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cookie" type="text/css">
+    <script src="C:\Users\Charly\CodoACodo\FirstWebSite-CarlaP\validator.js"></script>
+    <script src="C:\Users\Charly\CodoACodo\FirstWebSite-CarlaP\index2.js"></script>
     <title>Carla Pomarico</title>
 </head>
 
 <body>
 
+<!--Nav-->
+
     <header>
-        <div class="nav-main">
-            <span class="button-nav-main"><a href="index.html">Home</a></span>
-            <span class="button-nav-main"><a href="about.html">Experience</a></span>
-            <span class="button-nav-main"><a href="about.html">Education</a></span>
-            <span class="button-nav-main"><a href="index.html#about">About me</a></span>
-            <span class="button-nav-main"><a href="index.html#contact">Contact</a></span>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="navbar-expand-lg"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="experience.html">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="education.html">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
     </header>
 
-    <div class="welcome-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis nisi lacus, nec
-        posuere lacus interdum eget. Ut et ullamcorper metus. Praesent molestie enim volutpat accumsan porta. Vivamus
-        sit amet posuere mauris. Suspendisse quis dui ut neque maximus efficitur. In elementum mi ac imperdiet
-        ultricies. Mauris pharetra justo in faucibus mattis. Donec pretium urna quis rhoncus vestibulum. Integer
-        venenatis, ex nec pretium tristique, mi est dictum erat, at tempus sapien enim quis diam. Nullam viverra ex
-        libero, non suscipit enim vulputate a. Vestibulum ac erat eget leo feugiat pretium. Nam maximus dolor nulla,
-        eget consequat nisi tincidunt sed. Curabitur quis enim non turpis porttitor iaculis.
+<!--Welcome Section-->
+
+    <h1>Welcome</h1>
+
+    <div class="container">
+        <div class="main-text-container">
+            <div class="col-12">
+                <div class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis nisi
+                    lacus,
+                    nec
+                    posuere lacus interdum eget. Ut et ullamcorper metus. Praesent molestie enim volutpat accumsan
+                    porta.
+                    Vivamus
+                    sit amet posuere mauris. Suspendisse quis dui ut neque maximus efficitur. In elementum mi ac
+                    imperdiet
+                    ultricies. Mauris pharetra justo in faucibus mattis. Donec pretium urna quis rhoncus vestibulum.
+                    Integer
+                    venenatis, ex nec pretium tristique, mi est dictum erat, at tempus sapien enim quis diam. Nullam
+                    viverra
+                    ex
+                    libero, non suscipit enim vulputate a. Vestibulum ac erat eget leo feugiat pretium. Nam maximus
+                    dolor
+                    nulla,
+                    eget consequat nisi tincidunt sed. Curabitur quis enim non turpis porttitor iaculis.
+                </div>
+            </div>
+        </div>
     </div>
+
+<!--About Section-->
 
     <h1 id="about">About Me</h1>
 
-    <div class="contenedor dos-columnas">
-        <div class="container">
+    <div class="container">
+        <div class="about-row1">
             <div class="row">
-                <div class="col-6">
-                <img src="img/imagen1.jpg">
+                <div class="col-md-6">
+                    <img src=img/imagen1.jpg class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-md-6">
+                    <p>Aliquam tempus neque eget tempus consectetur. Integer ligula nunc, sagittis non malesuada quis,
+                        consequat
+                        eu ipsum. In hac habitasse platea dictumst.
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                <span class="about-text">Aliquam tempus neque eget tempus consectetur. Integer ligula nunc, sagittis non malesuada quis,
-                    consequat eu ipsum. In hac habitasse platea dictumst.
-                </span>
-                </div>    
-            </div>
-        </div>
     </div>
+
+<!--Contact Section-->
 
     <h1 id="contact">Contact</h1>
 
-    <form>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                else.</small>
+    <div class="form-container">
+        <div id="error_message"></div>
+        <form action="" id="myform" onsubmit=" return validate();">
+            <div class="input_field">
+                <input type="text" placeholder="Nombre" id="name">
+            </div>
+            <div class="input_field">
+                <input type="text" placeholder="Asunto" id="subject">
+            </div>
+            <div class="input_field">
+                <input type="text" placeholder="Telefono" id="phone">
+            </div>
+            <div class="input_field">
+                <input type="text" placeholder="Email" id="email">
+            </div>
+            <div class="input_field">
+                <textarea placeholder="Mensaje" id="message"></textarea>
+            </div>
+            <div class="btn pull-right">
+                <input type="submit">
+            </div>
+        </form>
+    </div>
+
+<!--Footer-->
+    
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+
+            <h3>Company<span>logo</span></h3>
+
+            <p class="footer-links">
+                <a href="#">Home</a>
+                ·
+                <a href="#">Blog</a>
+                ·
+                <a href="#">Pricing</a>
+                ·
+                <a href="#">About</a>
+                ·
+                <a href="#">Faq</a>
+                ·
+                <a href="#">Contact</a>
+            </p>
+
+            <p class="footer-company-name">Carla Pomarico &copy; 2022</p>
         </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+
+        <div class="footer-center">
+
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>2164 Corrientes Av.</span> Buenos Aires, Argentina</p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+54 911 6476 3655</p>
+            </div>
+
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:carpomarico@gmail.com">carpomarico@gmail.com</a></p>
+            </div>
+
         </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>About the website</span>
+                This page was designed and developed as part of the FullStack Python course of the Codo a Codo
+                program sponsored by the Autonomous City of Buenos Aires.
+            </p>
+
+            <div class="footer-icons">
+                <a href="https://www.linkedin.com/in/carla-pomarico/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/carlapomarico/"><i class="fa fa-github"></i></a>
+                <a href="https://www.instagram.com/lasudakita"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/charly.pomarico"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/LaSudakita"><i class="fa fa-twitter"></i></a>
+            </div>
+
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+
+    </footer>
+
 
 </body>
-
-<footer class="text-center text-lg-start bg-light text-muted">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <!-- Left -->
-        <div class="me-5 d-none d-lg-block">
-            <span>Get connected with me on social networks:</span>
-        </div>
-        <!-- Left -->
-
-        <!-- Right -->
-        <div>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-twitter"></i>
-            </a>
-        </div>
-        <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-
-    <!-- Section: Links  -->
-    <section class="">
-        <div class="container text-center text-md-start mt-5">
-            <!-- Grid row -->
-            <div class="row mt-3">
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <!-- Content -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>Carla Pomarico
-                    </h6>
-                    <p>
-                        This page was designed and developed as part of the FullStack Python course of the Codo a Codo
-                        program sponsored by the Autonomous City of Buenos Aires.
-                    </p>
-                </div>
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Contact
-                    </h6>
-                    <p><i class="fas fa-home me-3"></i> C.A.B.A. | 2164 Corrientes Av. | AR</p>
-                    <p>
-                        <i class="fas fa-envelope me-3"></i>
-                        carpomarico@gmail.com
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> +5491164763655</p>
-                    <p><i class="fas fa-print me-3"></i> +5401146513977</p>
-                </div>
-                <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-        </div>
-    </section>
-    <!-- Section: Links  -->
-
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2022 Copyright:
-        <a class="text-reset fw-bold" href="https://www.linkedin.com/in/carla-pomarico/">Carla Pomarico</a>
-    </div>
-    <!-- Copyright -->
-</footer>
 
 </html>
